# S24_Uriel_Trejo2

./: CMakeLists.txt  S24_Uriel_Trejo.sln  unique.txt
Assets/Shaders/: DefaultVertexShader.glsl
S24_Uriel_Trejo/: BossEnemy.cpp  BossEnemy.h  BulletEntity.cpp  BulletEntity.h  CMakeLists.txt  ChargerEnemy.cpp  ChargerEnemy.h  Enemy.cpp  Enemy.h  EnemyBehavior.cpp  EnemyBehavior.h  ExploderEnemy.cpp  ExploderEnemy.h  Explosion.cpp  Explosion.h  Game.cpp  Game.h  HUD.cpp  HUD.h  Health.cpp  Health.h  Onslaught.cpp  Onslaught.h  OrcEnemy.cpp  OrcEnemy.h  PowerUp.cpp  PowerUp.h  S24_Uriel_Trejo.vcxproj  S24_Uriel_Trejo.vcxproj.filters  Source.cpp  ZombieEnemy.cpp  ZombieEnemy.h
Toad/: CMakeLists.txt  Toad.vcxproj  Toad.vcxproj.filters  cpp.hint
Toad/Assets/Shaders/: DefaultFragmentShader.glsl
Toad/include/: Toad.h
Toad/src/: Image.cpp  Image.h  ImageImplement.h  Renderer.cpp  Renderer.h  RendererImplement.h  Shader.cpp  Shader.h  ShaderImplement.h  ToadApplication.cpp  ToadApplication.h  ToadEvents.cpp  ToadEvents.h  ToadKeys.h  ToadWindow.cpp  ToadWindow.h  Unit.cpp  Unit.h  Utility.h  WindowImpl.h  pch.h
Toad/src/codeGLFW/: WindowGLFW.cpp  WindowGLFW.h
Toad/src/codeOpenGL/: ImageOpenGL.cpp  ImageOpenGL.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
